--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         <nav class="navbar navbar-expand-md">
             <div class="container-fluid">
                 <a class="navbar-brand fw-bold" href="#"><img src="sklogo.png" width="130px" alt=""></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                <button class="navbar-toggler" type="button" id="togglebtn" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fas fa-bars text-white"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0" id="list">
                         <li class="nav-item">
                             <a class="nav-link" href="#banner">Home</a>
                         </li>
@@ -181,6 +181,14 @@
 <script>
     var scroll = new SmoothScroll('a[href*="#"]');
 </script>
-
+<script>
+var togglebtn = document.getElementById('togglebtn');
+var listItem = document.querySelectorAll('#list li');
+for(i=0;i<listItem.length;i++){
+    listItem[i].addEventListener('click',()=>{
+       togglebtn.click();
+    });
+}
+</script>
 </body>
 </html>
