--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                             <a class="nav-link" href="#testimonials">Testimonials</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#footer">Contact</a>
+                            <a class="nav-link" href="#social-media">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -144,7 +144,7 @@
     </div>
 </section>
 <!-- footer section -->
-<footer id="footer">
+<footer>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path fill="#f8f9fa" fill-opacity="1"
             d="M0,32L34.3,32C68.6,32,137,32,206,69.3C274.3,107,343,181,411,213.3C480,245,549,235,617,192C685.7,149,754,75,823,74.7C891.4,75,960,149,1029,186.7C1097.1,224,1166,224,1234,202.7C1302.9,181,1371,139,1406,117.3L1440,96L1440,0L1405.7,0C1371.4,0,1303,0,1234,0C1165.7,0,1097,0,1029,0C960,0,891,0,823,0C754.3,0,686,0,617,0C548.6,0,480,0,411,0C342.9,0,274,0,206,0C137.1,0,69,0,34,0L0,0Z">
@@ -183,11 +183,17 @@
 </script>
 <script>
 var togglebtn = document.getElementById('togglebtn');
+var list = document.getElementById('list');
 var listItem = document.querySelectorAll('#list li');
+togglebtn.addEventListener('click',()=>{
+    list.classList.toggle('open'); 
+});
 for(i=0;i<listItem.length;i++){
-    listItem[i].addEventListener('click',()=>{
-       togglebtn.click();
-    });
+    listItem[i].addEventListener('click', () => {
+        if(list.classList.contains('open')){
+            togglebtn.click();
+        }
+    }); 
 }
 </script>
 </body>
