changes to make responsive

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- meta tag for responsive -->
+    <meta name="viewport" content="width=device-width,intial-scale=1.0">
     <title>Agency website templetes - sk coding</title>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -191,7 +193,7 @@ togglebtn.addEventListener('click',()=>{
 for(i=0;i<listItem.length;i++){
     listItem[i].addEventListener('click', () => {
         if(list.classList.contains('open')){
-            togglebtn.click();
+            togglebtn.click();  
         }
     }); 
 }
